# django-gql-quick-start

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
django_gql_quick_start/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
